<?xml version="1.0"?>
<package format="2">
  <name>pololu_driver</name>
  <version>0.1.0</version>
  <description>The pololu_driver package</description>

  <maintainer email="i.piperakis@gmail.com">Joseph Piperakis</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/pololu_driver</url> -->
  <author email="i.piperakis@gmail.com">Joseph Piperakis</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>phylax_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>phylax_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>phylax_msgs</exec_depend>
  <export>
  </export>
</package>
